--- a/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
+++ b/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
@@ -164,7 +164,7 @@
             } @else {
               <div class="max-h-96 overflow-y-auto pr-2">
                 @for (acbr of appliedCustomerBillingRates; track acbr.id) {
-                  <div class="mb-4 p-4 bg-gray-50 dark:bg-secondary-300 rounded-lg border border-gray-200 dark:border-gray-600">
+                  <div data-cy="acbr" class="mb-4 p-4 bg-gray-50 dark:bg-secondary-300 rounded-lg border border-gray-200 dark:border-gray-600">
                     <div class="flex flex-col gap-2">
                       <div class="flex flex-row gap-2">
                         <p class="text-sm font-bold text-gray-700 dark:text-white">
