--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -74,7 +74,7 @@
         <div class="rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 dark:bg-gray-800 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-2 mb-4">
           @for (ch of filteredCharacteristics ; track ch.id; let i = $index) {
             @if(!ch.name?.endsWith('- enabled')){
-              <div class="flex flex-row w-full items-start">
+              <div data-cy="offerChar" class="flex flex-row w-full items-start">
                 @if(canBeDisabledChars.includes(ch.id)){
                   <label class="inline-flex items-center cursor-pointer w-fit justify-start items-start my-4 mr-2">
                     <input type="checkbox" (change)="onToggleChange($event, ch.name)" class="sr-only peer">
@@ -101,7 +101,7 @@
       <p class="mt-4  text-sm text-gray-500 dark:text-gray-400">You can change the metric values to simulate final prices</p>
       <div class="grid grid-cols-4 gap-2 mb-4">
         @for (metric of metrics || []; track metric.unitOfMeasure) {
-          <div class="flex flex-col">
+          <div data-cy="offerMetric" class="flex flex-col">
             <h5 [ngClass]="{
               'break-all': hasLongWord(metric.unitOfMeasure, 20),
               'break-words': !hasLongWord(metric.unitOfMeasure, 20)
